# ai-sales-teammate-workbench

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260508_0001_initial_schema.py  20260509_0002_harden_batch_1_schema.py  20260509_0003_runtime_provider_audit.py  20260510_0004_item_reopened_audit.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: auth.py  config.py  health.py  work_items.py
backend/app/audit/: __init__.py  actions.py
backend/app/auth/: rate_limit.py
backend/app/core/: config.py  health.py  runtime_config.py  security.py
backend/app/db/: base.py  demo_work_items.py  health.py  seed.py  session.py  sync_session.py
backend/app/llm/: __init__.py  errors.py  runs.py  types.py
backend/app/llm/providers/: __init__.py  anthropic.py  (+1 more)
backend/app/models/: audit_log.py  background_job.py  enums.py  idempotency_key.py  lead_work_item.py  llm_generation_run.py  mixins.py  organization.py  user.py
backend/app/schemas/: auth.py  generation.py  lead_profile.py  work_items.py
backend/app/work_items/: __init__.py  access.py  errors.py  state_machine.py
backend/app/workers/: approvals.py  celery_app.py  logging.py
backend/scripts/: render_free_start.sh
backend/tests/: conftest.py  test_app_startup.py  test_auth.py  test_config.py  test_database_foundation.py  test_hardening.py  test_lead_profile.py  test_llm_providers.py  test_seed.py  test_work_items.py  test_workers.py
(+19 files in other folders)
