[project]
name = "ai-sales-teammate-backend"
version = "0.1.0"
description = "FastAPI backend for the AI Sales Teammate Workbench."
requires-python = ">=3.11,<3.14"
dependencies = [
    "alembic==1.14.0",
    "anthropic==0.74.0",
    "asyncpg==0.30.0",
    "bcrypt==4.2.1",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "greenlet==3.1.1",
    "psycopg[binary]==3.2.3",
    "PyJWT==2.10.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "redis==5.2.1",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.1",
    "celery[redis]==5.5.3",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
